cabal-version:      3.0
name:               hello-reflex
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/ners/hello-reflex

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
license-file:       LICENCE
author:             ners
maintainer:         ners@gmx.ch

-- A copyright notice.
-- copyright:
category:           Graphics
extra-source-files: CHANGELOG.md

executable hello-reflex
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, reflex-dom
    hs-source-dirs:   app
    default-language: Haskell2010
